.metadata/.plugins/org.eclipse.cdt.ui/gpio_input_driver.build.log
08:39:47 **** Incremental Build of configuration Debug for project gpio_input_driver ****
make -j12 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F4 -DSTM32F411RETx -DSTM32F411xE -c -I../Inc -I/home/shivam/stm32_baremetal/chip_headers/CMSIS/Device/ST/STM32F4xx/Include -I/home/shivam/STM32CubeF4/Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
../Src/main.c: In function 'uart_set_baudrate':
../Src/main.c:39:31: error: 'PeriPhClk' undeclared (first use in this function); did you mean 'PeriphClk'?
   39 | USARTx->BRR =compute_uart_div(PeriPhClk,BaudRate);
      |                               ^~~~~~~~~
      |                               PeriphClk
../Src/main.c:39:31: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Src/subdir.mk:25: Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

08:39:48 Build Failed. 2 errors, 0 warnings. (took 68ms)

